--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,30 +1,74 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="goToForm('ingreso')">
+        <ion-icon name="add-circle"></ion-icon>
+      </ion-button>
+
+      <ion-button (click)="goToForm('egreso')">
+        <ion-icon name="remove-circle"></ion-icon>
+      </ion-button>
+
+      <ion-button (click)="goToProfile()">
+        <ion-icon name="person-circle"></ion-icon>
+      </ion-button>
+      
+
+      <ion-button (click)="toggleFinancialTips()">
+        <ion-icon name="information-circle"></ion-icon>
+      </ion-button>
+
+      <ion-button (click)="goToMetas()">
+        <ion-icon name="star-outline"></ion-icon>
+        Metas
+      </ion-button>
+
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <div class="card">
     <h2>Ahorro total</h2>
-    <p>$200</p>
+    <p>{{ totalSavings | currency }}</p>
   </div>
 
   <div class="card">
     <h2>Gastos totales</h2>
-    <p>$150</p>
+    <p>{{ totalExpenses | currency }}</p>
   </div>
 
   <div class="card">
     <h2>Ahorro de la semana pasada</h2>
-    <p>$350</p>
+    <p>{{ lastWeekSavings | currency }}</p>
   </div>
+  
+  <div *ngIf="showTips && consejos.length > 0">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Consejos Financieros</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ul>
+          <li *ngFor="let consejo of consejos">{{ consejo }}</li>
+        </ul>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <div *ngIf="showTips && consejos.length === 0">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Consejos Financieros</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>No hay consejos disponibles en este momento.</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  
+  
 
+  <!-- Gráficos de ingresos y egresos -->
   <canvas id="myPieChart" width="400" height="400" style="margin: auto;"></canvas>
   <canvas id="myBarChart" width="400" height="400" style="margin: auto;"></canvas>
-
-  <ion-button expand="full" color="primary" (click)="goToForm()" style="margin-top: 20px;">
-    Añadir Ingreso/Egreso
-  </ion-button>
 </ion-content>
-
