--- a/src/app/form/form.page.html
+++ b/src/app/form/form.page.html
@@ -1,29 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Registrar Transacción</ion-title>
+    <ion-title>{{ type ? 'Registrar Ingreso' : 'Registrar Egreso' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <form (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Descripción</ion-label>
-      <ion-input type="text" [(ngModel)]="description" name="description" required></ion-input>
+      <ion-input [(ngModel)]="description" name="description" required></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Monto</ion-label>
-      <ion-input type="number" [(ngModel)]="amount" name="amount" required></ion-input>
+      <ion-input [(ngModel)]="amount" name="amount" type="number" required></ion-input>
     </ion-item>
 
-    <ion-item>
-      <ion-label>Tipo</ion-label>
-      <ion-select [(ngModel)]="type" name="type">
-        <ion-select-option value="ingreso">Ingreso</ion-select-option>
-        <ion-select-option value="egreso">Egreso</ion-select-option>
-      </ion-select>
-    </ion-item>
-
-    <ion-button expand="full" type="submit">Registrar</ion-button>
+    <ion-button expand="full" type="submit" [disabled]="!description || !amount">Registrar {{ type ? 'Ingreso' : 'Egreso' }}</ion-button>
   </form>
 </ion-content>
