--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,20 +5,25 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <!-- Imagen en la parte superior -->
-  <img src="assets/img/login-image.jpg" alt="Login Image" style="width: 100%; height: auto;">
-
+  
   <form (ngSubmit)="onSubmit()">
+    <div class="logo-container">
+      <img src="assets/images/logo.jpg" alt="Logo" class="logo" />
+    </div>
     <ion-item>
-      <ion-label position="floating">Username</ion-label>
-      <ion-input type="text" [(ngModel)]="username" name="username" required></ion-input>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Password</ion-label>
+      <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
     </ion-item>
 
-    <ion-button expand="full" type="submit">Login</ion-button>
+    <ion-button expand="full" type="submit">Iniciar sesión</ion-button>
   </form>
+
+  <div class="ion-text-center">
+    <p>¿No tienes cuenta? <a (click)="goToRegister()">Regístrate</a></p>
+  </div>
 </ion-content>
