--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Inicio de sesión</ion-title>
+    <ion-title>Money Up</ion-title>
   </ion-toolbar>
 </ion-header>
 
